# cometvisu-knxd-fcgi

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  PLAN.md  README.md
.github/workflows/: ci.yml
mocks/: CMakeLists.txt  mock_knxd_socket.cpp  mock_knxd_socket.h
src/: CMakeLists.txt  main.cpp  version.cpp  version.h
src/fcgi/: fcgi_request.cpp  fcgi_request.h  fcgi_server.cpp  fcgi_server.h
src/handlers/: login_handler.cpp  login_handler.h  read_handler.cpp  read_handler.h  write_handler.cpp  write_handler.h
src/knxd/: knxd_client.cpp  knxd_client.h  knxd_protocol.cpp  knxd_protocol.h
src/router/: router.cpp  router.h
src/state/: session_store.cpp  session_store.h
src/util/: debug_log.cpp  debug_log.h  hex.cpp  hex.h  json_builder.cpp  json_builder.h  query_string.cpp  query_string.h
tests/: CMakeLists.txt
tests/e2e/: CMakeLists.txt  test_full_flow.cpp
tests/integration/: CMakeLists.txt  test_concurrent_clients.cpp  test_knxd_client.cpp  test_read_handler.cpp  test_write_handler.cpp
tests/unit/: CMakeLists.txt  test_debug_log.cpp  test_hex.cpp  test_json_builder.cpp  test_knxd_address.cpp  test_knxd_protocol.cpp  test_login_handler.cpp  test_query_string.cpp  test_session_store.cpp  test_version.cpp
tools/: fcgi-curl.sh
